--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,13 @@
-language: node_js
-node_js:
-- stable
+ language: node_js
+ node_js:
+ - stable
+ branches:
+   only:
+   - development
+notifications:
+    email:
+      recipients:
+        - me@cjosullivan.net     # uae your own
+        - cjosullivan@hotmail.co.uk   # uae other (optional)
+      on_success: never        # default: change
+      on_failure: always       # default: always
